Some Code to try the Users Service Methods.

--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -1,1 +1,25 @@
+<div class="jumbotron-fluid text-center p-5">
+  <p class="custom">
+    Syriatel Food Delivery
+  </p>
+  <p class="custom">
+    New APP
+  </p>
+</div>
 <p>user-login works!</p>
+
+<p>
+  {{myUsers | json}}
+</p>
+
+<p>
+  {{myUser | json}}
+</p>
+
+<p>
+  {{errorMsgUsers}}
+</p>
+
+<p>
+  {{errorMsgUser}}
+</p>
